# rp2350-gameboy-cartridge-firmware

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
gb-bootloader/: bootloader.c
pio/: gameboy_bus.pio  hyperram.pio  hyperram_ro.pio
src/: bootloader.gb  dma_helper.rs  gb_bootloader.rs  gb_dma.rs  gb_mbc.rs  gb_pio.rs  gb_rtc.rs  gb_savefile.rs  hyperram.rs  main.rs  mcp795xx.rs  mcp975xx.rs  picotool_reset.rs  production_data.rs  rom_info.rs  rp2350_core_voltage.rs  ws2812.rs  ws2812_spi.rs
