[package]
edition = "2021"
name = "embassy-rp2350-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-embedded-hal = { git = "https://github.com/shilga/embassy", features = ["defmt"] }
embassy-sync = { git = "https://github.com/shilga/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/shilga/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/shilga/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/shilga/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-usb = { git = "https://github.com/shilga/embassy", features = ["defmt"] }
embassy-futures = { git = "https://github.com/shilga/embassy"}
embassy-usb-logger = { git = "https://github.com/shilga/embassy" }


defmt = "0.3"
#defmt-rtt = "0.4"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
defmt-serial = { version = "0.10.0" }
fixed = "1.23.1"
fixed-macro = "1.2"
static_cell = "2.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
pio = "0.2.1"

smart-leds = "0.3.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }